--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <title>PowerUp</title>
   </head>
   <body class="white p2">
-    <!-- <header class="header m-block">
+    <header class="header m-block">
       <div class="container">
         <div class="header__wrapper">
           <div class="header__left-part">
-            <a href="#" class="logo-link">
+            <a href="index.html" class="logo-link">
               <img src="./img/logo.svg" alt="PowerUp" class="img-dark" />
               <img src="./img/logo-white.svg" alt="PowerUp" class="img-white" />
             </a>
@@ -52,9 +52,13 @@
           </div>
           <div class="header__right-part">
             <div class="header__right-part_btns">
-              <button class="btn btn-second" data-lang="for-business">
+              <a
+                href="for-business.html"
+                class="btn btn-second"
+                data-lang="for-business"
+              >
                 For business
-              </button>
+              </a>
               <button class="btn btn-main" data-lang="download-app">
                 Download app
               </button>
@@ -160,7 +164,7 @@
           </div>
         </div>
       </div>
-    </header> -->
+    </header>
     <main class="main m-block">
       <div class="container">
         <h1 class="h1 main-phase">
@@ -537,7 +541,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="section_form m-block">
+    <div class="section_form m-block">
       <div class="container">
         <span class="span form__span mb-40" data-lang="form__span">
           Get in Touch
@@ -597,9 +601,9 @@
           <img src="img/form__img.png" alt="form__img" />
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- попап когда форма валидирована -->
-    <!-- <div class="form__success">
+    <div class="form__success">
       <div class="form__success_wrapper">
         <button class="form__success_close">
           <img src="img/close__btn.svg" alt="close" />
@@ -620,7 +624,7 @@
           </button>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="contacts m-block">
       <div class="container">
         <ul class="contacts__social">
@@ -688,406 +692,8 @@
       </div>
     </div>
     <!-- другая страница -->
-    <div class="business__main m-block">
-      <div class="container">
-        <div class="business__main_wrapper">
-          <div class="business__main_wrapper-left">
-            <div class="business__main_info">
-              <h1 class="h1 business__main_h1" data-lang="business__main_h1">
-                Partner with Us to Power Up Your Business
-              </h1>
-              <p class="p1 business__main_p1" data-lang="business__main_p1">
-                Boost your reach and keep customers connected
-              </p>
-              <button
-                class="btn btn-main business__main_btn"
-                data-lang="business__main_btn"
-              >
-                Get Started
-              </button>
-            </div>
-            <div class="business__main_contacts">
-              <div class="business_contacts__communication">
-                <a href="mailto:powerup@gmail.com">powerup@gmail.com</a>
-                <a href="tel:+48555555555">+48 55 555 55 55</a>
-              </div>
-              <ul class="business_contacts__social">
-                <li class="business_contacts__social_item">
-                  <a href="#">
-                    <img
-                      src="./img/icons/dark/facebook.svg"
-                      alt="facebook"
-                      class="img-dark"
-                    />
-                    <img
-                      src="./img/icons/white/facebook-white.svg"
-                      alt="facebook"
-                      class="img-white"
-                    />
-                  </a>
-                </li>
-                <li class="business_contacts__social_item">
-                  <a href="#">
-                    <img
-                      src="./img/icons/dark/instagram.svg"
-                      alt="instagram"
-                      class="img-dark"
-                    />
-                    <img
-                      src="./img/icons/white/instagram-white.svg"
-                      alt="instagram"
-                      class="img-white"
-                    />
-                  </a>
-                </li>
-                <li class="business_contacts__social_item">
-                  <a href="#">
-                    <img
-                      src="./img/icons/dark/tiktok.svg"
-                      alt="tiktok"
-                      class="img-dark"
-                    />
-                    <img
-                      src="./img/icons/white/tiktok-white.svg"
-                      alt="tiktok"
-                      class="img-white"
-                    />
-                  </a>
-                </li>
-                <li class="business_contacts__social_item">
-                  <a href="#">
-                    <img
-                      src="./img/icons/dark/whatsapp.svg"
-                      alt="whatsapp"
-                      class="img-dark"
-                    />
-                    <img
-                      src="./img/icons/white/whatsapp-white.svg"
-                      alt="whatsapp"
-                      class="img-white"
-                    />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="business__main_img">
-            <img src="img/business__main_img.png" alt="business__main_img" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="counts m-block">
-      <div class="container">
-        <h2 class="h2 counts__h2 mb-40" data-lang="counts__h2">
-          Make Money by Offering a Smarter Service
-        </h2>
-        <div class="counts__wrapper">
-          <div class="counts__wrapper_item">
-            <h3 class="h3 counts__h3" data-lang="counts__h3_1">700+</h3>
-            <p class="p2 counts__p2" data-lang="counts__p2_1">
-              businesses already partner with us.
-            </p>
-          </div>
-          <div class="counts__wrapper_item">
-            <h3 class="h3 counts__h3" data-lang="counts__h3_2">99%</h3>
-            <p class="p2 counts__p2" data-lang="counts__p2_2">
-              customer satisfaction rate with our service.
-            </p>
-          </div>
-          <div class="counts__wrapper_item">
-            <h3 class="h3 counts__h3" data-lang="counts__h3_3">24/7</h3>
-            <p class="p2 counts__p2" data-lang="counts__p2_3">
-              support to ensure seamless operations.
-            </p>
-          </div>
-          <div class="counts__wrapper_item">
-            <h3 class="h3 counts__h3" data-lang="counts__h3_4">1M+</h3>
-            <p class="p2 counts__p2" data-lang="counts__p2_4">
-              devices charged globally.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="places m-block">
-      <div class="container">
-        <span class="span places__span mb-40" data-lang="places__span">
-          Ideal Business Locations
-        </span>
-        <h2 class="h2 places__h2" data-lang="places__h2">
-          Perfect FOR High-Traffic Businesses
-        </h2>
-        <p class="p2 places__p2" data-lang="places__p2">
-          Provide a convenient charging solution that enhances your customers’
-          experience while generating extra income for your business.
-        </p>
-        <div class="places__wrapper">
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/1.svg" alt="1" class="img-dark" />
-                <img src="./img/icons/white/1.svg" alt="1" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/1.svg" alt="1" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_1">
-              Shopping Mall
-            </h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/2.svg" alt="2" class="img-dark" />
-                <img src="./img/icons/white/2.svg" alt="2" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/2.svg" alt="2" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_2">
-              Convenience Store
-            </h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/3.svg" alt="3" class="img-dark" />
-                <img src="./img/icons/white/3.svg" alt="3" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/3.svg" alt="3" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_3">Airport</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/4.svg" alt="4" class="img-dark" />
-                <img src="./img/icons/white/4.svg" alt="4" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/4.svg" alt="4" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_4">Spa</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/5.svg" alt="5" class="img-dark" />
-                <img src="./img/icons/white/5.svg" alt="5" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/5.svg" alt="5" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_5">Gym</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/6.svg" alt="6" class="img-dark" />
-                <img src="./img/icons/white/6.svg" alt="6" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/6.svg" alt="6" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_6">
-              Co-Working Space
-            </h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/7.svg" alt="7" class="img-dark" />
-                <img src="./img/icons/white/7.svg" alt="7" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/7.svg" alt="7" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_7">Event Venue</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/8.svg" alt="8" class="img-dark" />
-                <img src="./img/icons/white/8.svg" alt="8" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/8.svg" alt="8" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_8">Library</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/9.svg" alt="9" class="img-dark" />
-                <img src="./img/icons/white/9.svg" alt="9" class="img-white" />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/9.svg" alt="9" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_9">Restaurant</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/10.svg" alt="10" class="img-dark" />
-                <img
-                  src="./img/icons/white/10.svg"
-                  alt="10"
-                  class="img-white"
-                />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/10.svg" alt="10" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_10">Hotel</h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/11.svg" alt="11" class="img-dark" />
-                <img
-                  src="./img/icons/white/11.svg"
-                  alt="11"
-                  class="img-white"
-                />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/11.svg" alt="11" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_11">
-              Beauty Salon
-            </h3>
-          </div>
-          <div class="places__item">
-            <div class="places__img">
-              <div class="places__img_static">
-                <img src="./img/icons/dark/12.svg" alt="12" class="img-dark" />
-                <img
-                  src="./img/icons/white/12.svg"
-                  alt="12"
-                  class="img-white"
-                />
-              </div>
-              <div class="places__img_dynamic">
-                <img src="img/icons/gradient/12.svg" alt="12" />
-              </div>
-            </div>
-            <h3 class="h3 places__h3" data-lang="places__h3_12">Clinic</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="faq m-block">
-      <div class="container">
-        <span class="span faq__span mb-40" data-lang="faq__span">
-          FAQ: Partnering with Us
-        </span>
-        <h2 class="h2 faq__h2" data-lang="faq__h2">
-          Common Questions About Collaboration
-        </h2>
-        <div class="faq__wrapper">
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_1">
-                How can my business benefit from hosting a charging station?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-              asperiores!
-            </div>
-          </div>
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_2">
-                What does it cost to install a charging station?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-              asperiores!
-            </div>
-          </div>
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_3">
-                What kind of support do you offer to business partners?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_3">
-              We provide 24/7 technical support, marketing materials, and
-              regular maintenance to ensure smooth operations.
-            </div>
-          </div>
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_4">
-                How much space does the charging station require?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-              asperiores!
-            </div>
-          </div>
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_5">
-                What types of businesses are ideal for hosting a charging
-                station?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-              asperiores!
-            </div>
-          </div>
-          <div class="faq__item">
-            <div class="faq__item_top-wrapper">
-              <h3 class="h3 faq__h3" data-lang="faq__h3_6">
-                How do I get started with a partnership?
-              </h3>
-              <button class="faq__btn">
-                <img src="img/arrow__faq.svg" alt="arrow" />
-              </button>
-            </div>
-            <div class="faq__answer" data-lang="faq__answer_6">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-              asperiores!
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- <footer class="footer">
+
+    <footer class="footer">
       <div class="container">
         <div class="footer__right">
           <div class="footer__right_logos">
@@ -1174,7 +780,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="language.js"></script>
